# shiny-kpi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kpi-custom/: README.md  main.py  pyproject.toml
kpi-custom/kpi_custom/data/: .gitignore  config.toml
shiny_kpi/: __init__.py  app.py  builder.py  config.py  db_connect.py  element.py  main.py  server.py  tool.py  ui.py
shiny_kpi/app/: app.py
shiny_kpi/data/: config.toml  odoo.toml
shiny_kpi/src_app/: app.py  odoo.py
