[project]
name = "shiny-kpi"
version = "0.1.1"
description = "From database to KPI"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
keywords = [ "Dashboard", "Kpi", "Shiny python" ]
authors = [
    { name = "David BEAL", email = "david.beal@akretion.com" },
    { name = "Mael", email = "lucas47772005@gmail.com" }
]
maintainers = [
    { name = "David BEAL", email = "david.beal@akretion.com" },
]
requires-python = ">=3.13"
dependencies = [
    "great_tables",
    "plotly",
    "polars",
    "psycopg",
    "seaborn",
    "shiny",
    "shinywidgets",
    "pyarrow",
    "connectorx",
    "pg-autojoin",
    "pg-sql-helper",
    "sqlglot[rs]>=27.6.0",
]

[tool.uv.sources]
pg-autojoin = { path = "../pg-autojoin", editable = true }
pg-sql-helper = { path = "../pg-sql-helper", editable = true }

# pg-autojoin = { git = "https://github.com/bealdav/pg-autojoin.git", rev = "main" }

[project.urls]
homepage = "https://github.com/akretion/shiny-kpi/README.md"
repository = "https://github.com/akretion/shiny-kpi"
documentation = "https://github.com/akretion/shiny-kpi/README.md"
